# CPPPhoneGameEngine

./: .gitignore  CMakeLists.txt  settings.gradle
.VSCodeCounter/2026-06-10_17-16-00/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: default.frag  default.vert  tileMap.frag  tileMap.vert
app/src/main/cpp/: main.cpp
app/src/main/cpp/CameraClass/: CameraClass.cpp  CameraClass.hpp
app/src/main/cpp/EBOClass/: EBOClass.cpp  EBOClass.hpp
app/src/main/cpp/GameSceneClass/: GameSceneClass.cpp  GameSceneClass.hpp
app/src/main/cpp/HomeSceneClass/: HomeSceneClass.cpp  HomeSceneClass.hpp
app/src/main/cpp/MapClass/: MapClass.cpp  MapClass.hpp
app/src/main/cpp/ObjectClass/: ObjectClass.cpp  ObjectClass.hpp
app/src/main/cpp/ResourceManagerClass/: ResourceManager.cpp  ResourceManager.hpp
app/src/main/cpp/SceneClass/: SceneClass.cpp  SceneClass.hpp
app/src/main/cpp/ScreenClass/: ScreenClass.cpp  ScreenClass.hpp
app/src/main/cpp/Shader/: ShaderClass.cpp  ShaderClass.hpp
app/src/main/cpp/SquareClass/: SquareClass.cpp  SquareClass.hpp
app/src/main/cpp/TextClass/: TextClass.cpp  TextClass.hpp
app/src/main/cpp/TileMapClass/: TileMapClass.cpp  TileMapClass.hpp
app/src/main/cpp/VAOClass/: VAOClass.cpp  VAOClass.hpp
app/src/main/cpp/VBOClass/: VBOClass.cpp  VBOClass.hpp
app/src/main/res/values/: strings.xml
